--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,18 @@
+# Core dependencies
+Flask==3.1.0
+Flask-CORS==4.0.0
+python-dotenv==1.0.1
+requests==2.32.3
 
-flask==2.0.1
-flask-cors==3.0.10
-openai==1.3.0
-python-dotenv==0.19.0
-requests==2.26.0
+# Image processing
+Pillow==11.1.0
+
+# AI/ML
+openai==1.63.0
+
+# Logging and monitoring
+logfire[flask]==3.5.3
+
+# Development dependencies
+black==25.1.0
+pylint==3.3.4
