Added some cleanup and better error handling

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
+# API Configuration
+LANGFLOW_BASE_URL=your_langflow_base_url_here
+LANGFLOW_FLOW_ID=your_langflow_flow_id_or_endpoint_namehere
 
+# Image Generation API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 STABILITY_API_KEY=your_stability_api_key_here
-LANGFLOW_BASE_URL=your_langflow_base_url_here
-LANGFLOW_FLOW_ID=your_langflow_flow_id_here
