--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ LANGFLOW_FLOW_ID=your_langflow_flow_id_or_endpoint_namehere
 # Image Generation API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 STABILITY_API_KEY=your_stability_api_key_here
+
+# Vite Configuration
+VITE_API_URL=http://localhost:5000
