Uploaded the very latest version of the codebeasts Langflow flow *.json

--- a/CODEBEASTS_v4.json
+++ b/CODEBEASTS_v4.json
@@ -8386,6 +8386,7 @@
                   "GOOGLE_ANALYTICS",
                   "GOOGLE_DRIVE_BETA",
                   "GOOGLE_MAPS",
+                  "GOOGLEADS",
                   "GOOGLECALENDAR",
                   "GOOGLEDOCS",
                   "GOOGLEDRIVE",
@@ -8411,6 +8412,7 @@
                   "LINKEDIN",
                   "LINKHUT",
                   "MAILCHIMP",
+                  "METAADS",
                   "MICROSOFT_TEAMS",
                   "MICROSOFT_TENANT",
                   "MIRO",
@@ -8438,6 +8440,7 @@
                   "SPOTIFY",
                   "SQUARE",
                   "STACK_EXCHANGE",
+                  "SUPABASE",
                   "SURVEY_MONKEY",
                   "TIMELY",
                   "TODOIST",
