--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "everart": "^1.2.2",
+    "formidable": "^3.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.358.0",
     "next": "^15.2.4",
@@ -61,6 +62,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.11.25",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.64",
