--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "^15.2.4",
     "next-themes": "^0.3.0",
     "nprogress": "^0.2.0",
+    "openai": "^4.93.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.4",
     "react-dom": "^18.2.0",
