--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.5.0",
@@ -65,6 +66,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.25",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.64",
@@ -72,8 +74,10 @@
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
+    "jest": "^29.7.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.3.2",
     "typescript": "^5.4.2"
   }
 }
