--- a/package.json
+++ b/package.json
@@ -71,9 +71,12 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "jest": "^29.7.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
